--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Calculator</title>
 </head>
 <body>
+    <div class="card-calculator">
+        <div class="box-data">
+
+        </div>
+        <div class="box-result">
+            
+        </div> 
+    </div>
     
 </body>
 </html>
