--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                 <div class = "select-tip">
                     <p>Select Tip %</p>
                     <div>
-                        <button class = "btn btn-1">5%</button>
-                        <button class = "btn btn-2">10%</button>
-                        <button class = "btn btn-3">15%</button>
-                        <button class = "btn btn-4">25%</button>
-                        <button class = "btn btn-5">50%</button>
-                        <button class = "btn btn-6">Custom</button>
+                        <button class = "btn btn--green">5%</button>
+                        <button class = "btn btn--green">10%</button>
+                        <button class = "btn btn--green">15%</button>
+                        <button class = "btn btn--green">25%</button>
+                        <button class = "btn btn--green">50%</button>
+                        <input class="input-tip" type="text" placeholder="Custom">
                     </div>
                 </div>
                 <div class="number-people">
