--- a/index.html
+++ b/index.html
@@ -32,17 +32,37 @@
                 </div>
                 <div class="number-people">
                     <p>Number of people</p>
-                    <div class="number-input">
+                    <div class="number-input">  
                         <img src="src/img/icon-person.svg" alt="icon person">
                         <input class="input-number" type="text" placeholder="0">
                     </div>
                 </div>
             </div>
-            <div class="box-calculator box-calculartor--green">
-                
+            <div class="box-calculator box-calculator--green"> 
+                <div> 
+                    <div class = "result">
+                        <div class = "description">
+                            <p>Tip amount</p>
+                            <p>/ person</p>
+                        </div>
+                        <div class = "amount">
+                            <p>$0.00</p>
+                        </div>
+                    </div>
+                    <div class = "result">
+                        <div class = "description">
+                            <p>Total</p>
+                            <p>/ person</p>
+                        </div>
+                        <div class = "amount">
+                            <p>$0.00</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="btn btn--green-light">RESET</button>
+
             </div> 
-        </div>
+        </div>   
     </main>
-    
 </body>
 </html>
